tests/models/struct/unnamed/u32/pass/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    u32
);
fn main() {}
