tests/models/struct/unnamed/u32/fail/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2.0)]
    u32
);
fn main() {}
